--- a/styles/flower.css
+++ b/styles/flower.css
@@ -28,6 +28,8 @@ font-family: 'Open Sans', sans-serif;
 .banner-content{
     max-width: 600px;
 }
+
+
 .banner .banner-pic{
     width: 635px;
 }
@@ -37,14 +39,27 @@ font-family: 'Open Sans', sans-serif;
     font-weight: 800;
     margin-bottom: 30px;
 }
+.banner-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+
+}
 /* main related style */
 
 /* section deal styles */
 .deal{
     padding: 100px 429px 100px 395px;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 130px 0;
+    max-width: 1922px;
+    height: 620px;
+    margin: 0 auto;
 }
 .deal-content{
     max-width: 590px;
@@ -56,4 +71,11 @@ font-family: 'Open Sans', sans-serif;
     color: #272727;
     font-size: 40px;
     font-weight: 800;
+}
+.deal-desc{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
