--- a/styles/flower.css
+++ b/styles/flower.css
@@ -18,6 +18,7 @@ font-family: 'Open Sans', sans-serif;
 /* header related style */
 .header{
     background-color: rgba(229, 84, 115, 0.10);
+    
 }
 .banner{
     padding: 50px 240px 0px 240px ;
@@ -78,4 +79,37 @@ font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+/* footer section */
+.instra{
+    text-align: center;
+    margin: 128px 24px;
+}
+.instra-img{
+    display: flex;
+   margin-right: 24px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
+/* latest deal styles */
+.latest-deal{
+    text-align: center;
+    background-image: url('../images/Rectangle\ 9.png');
+    background-position: center;
+    margin: 128px 240px;
+    width: 1440px;
+    height: 449px;
+    flex-shrink: 0;
+    margin: 128px auto;
+}
+#latest-deal-title{
+    padding-top: 122px;
+    margin-bottom: 0;
+}
+#email{
+    width: 700px;
+    height: 64px;
+    border-radius: 8px;
+    background: #FFF; 
 }
