--- a/styles/flower.css
+++ b/styles/flower.css
@@ -10,113 +10,140 @@ font-family: 'Open Sans', sans-serif;
     background: #E55473;
     border: 0;
     color: #FFF;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 700;
     padding: 20px 43px;
+    margin-left: 40px;
 
 }
 /* header related style */
 .header{
     background-color: rgba(229, 84, 115, 0.10);
+    width: 10px;
+    width: 1920px;
+    height: 650px;
+
     
 }
 .banner{
-    padding: 50px 240px 0px 240px ;
+    padding: 50px 240px 0px 20px ;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.banner-content{
-    max-width: 600px;
-}
 
 
-.banner .banner-pic{
-    width: 635px;
+.banner-pic{
+    width: 400px;
+    margin-right: 700px;
 }
 .banner-title{
     color: #272727;
-    font-size: 80px;
+    font-size: 30px;
     font-weight: 800;
     margin-bottom: 30px;
+    padding-right: 97px;
+    margin-left: 40px;
 }
 .banner-description{
     color: rgba(39, 39, 39, 0.60);
-    font-size: 18px;
+    font-size: 10px;
     font-weight: 400;
     line-height: 30px;
+    margin-left: 40px;
 
 }
 /* main related style */
 
 /* section deal styles */
 .deal{
-    padding: 100px 429px 100px 395px;
+    padding: 10px 42px 10px 35px;
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 130px 0;
-    max-width: 1922px;
-    height: 620px;
-    margin: 0 auto;
+    max-width: 192px;
+    margin-left: 00px;
 }
 .deal-content{
-    max-width: 590px;
+    max-width: 600px;
 }
-.deal .deal-pic{
-    width: 318px;
+.deal-pic{
+    width: 300px;
+    margin-left: 5px;
+    margin-right: 900px;
 }
+
+
 .deal-title{
     color: #272727;
-    font-size: 40px;
+    font-size: 24px;
     font-weight: 800;
+    margin-right: 200px;
+    margin-left: 80px;
 }
 .deal-desc{
     color: rgba(39, 39, 39, 0.60);
-    text-align: center;
-    font-size: 18px;
+
+    font-size: 12px;
     font-weight: 400;
-    line-height: 30px;
+    width: 700px;
+    margin-left: 80px;
+}
+#sign-up{
+    margin-left: 80px;
+}
+#instra-desc{
+    margin-left: 120px;
 }
 /* footer section */
 .instra{
     text-align: center;
-    margin: 128px 24px;
+.instra-title{
+    color: #272727;
+    font-size: 24px;
+    font-weight: 800;
+    margin-right: 200px;
+    margin-left: 160px;
+}  
 }
 .instra-img{
     display: flex;
-   margin-right: 24px;
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
+    width: 300px;
+    height: 200px;
+    margin-left: 170px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+   
 }
 /* latest deal styles */
 .latest-deal{
     text-align: center;
+    
+    width: 800px;
+    height: 250px;
+    margin: 70px 220px 120px 50px;
+    border-radius: 8px;
+    background: url(<path-to-image>), lightgray 0px -203.444px / 100% 213.755% no-repeat;
     background-image: url('../images/Rectangle\ 9.png');
-    background-position: center;
-    margin: 128px 240px;
-    width: 1440px;
-    height: 449px;
-    flex-shrink: 0;
-    margin: 128px auto;
+    background-position:auto;
+
 }
 #latest-deal-title{
-    padding-top: 122px;
+    padding-top: 59px;
     margin-bottom: 0;
 }
 #email{
-    width: 700px;
-    height: 64px;
+    width: 500px;
+    height: 30px;
     border-radius: 8px;
     background: #FFF; 
 }
+
 .main-footer{
     background: #111010;
-    width: 1922px;
-    height: 449px;
+    width: 902px;
+    height: 400px;
     text-align: center;
     
 }
@@ -141,7 +168,7 @@ font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
-    padding: 21px 649px 32px 648px ;
+    padding: 0px 789px 12px 140px ;
 
 }
 .web{
